[project]
name = "ansibleinventorycmdb"
version = "1.0.0"
description = "Generates a CMDB webpage from an ansible git repository"
authors = [{ name = "Kieran Gee", email = "kieran.lost.the.game@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "waitress>=3.0.2",
]

[dependency-groups]
dev = ["pyright"]

type = [
    "mypy",
    "types-colorama",
    "types-lxml",
    "types-requests",
]

lint = ["ruff"]

test = [
    "pytest",
    "tomlkit",
    "pytest-cov",
    "pytest-mock",
    "pytest-random-order",
    "types-requests",
    "types-pyyaml",
    "detect-test-pollution",
    "requests-mock",
]

[tool.uv]
default-groups = ["dev", "test", "type", "lint"]


[tool.ruff]
cache-dir = "~/.cache/ruff"
target-version = "py311"
line-length = 120

[tool.ruff.lint]
extend-fixable = ["B", "I001"] # KG I think this means something...
extend-unsafe-fixes = [
    "F401",
] # KG I don't like that this is fixed automatically (this doesnt work?)
select = ["ALL"] # KG Include absolutely all of Ruff's rules.
ignore = [
    # Modules
    "DJ",  # KG Django not required
    "PTH", # KG builtin 'open' is fine, not going to use pathlib
    "DTZ", # KG no need to specify timezone for time objects

    # Specific rules
    # "ANN101", # KG Why define self type for object functions...
    "TD002",  # KG Verbose TODO, only I work on this project
    "TD003",  # KG Verbose TODO, only I work on this project
    "ISC001", # KG conflict in the formatter
    "COM812", # KG conflict in the formatter
    "G004",   # KG Fine to log this way
    "S301",   # KG No user input, happy to use pickle
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    # Modules
    "ARG", # KG Unused function args -> fixtures nevertheless are functionally relevant
    "FBT", # KG Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()

    # Specific rules
    "S101",   # KG asserts allowed in tests.
    "ANN201", # KG Not really needed for pytest.
    "SLF001", # KG Accessing private members is needed for testing.
    "INP001", # KG __init__.py not needed for PyTest.
    "PT004",  # KG monkeypatches don't return.
    "ANN001", # KG Tests don't need type hints.
    "S311",   # KG I'll assume no real crypto will be done in PyTest.
]
"create_my_new_project.py" = [ # If you have used this boilerplate to start making your app, you can delete this.
    # Specific rules
    "T201", # KG print() is fine for the scale of this file
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 40

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov-context=test",
    "--cov=ansibleinventorycmdb",
    "--cov-report=term",
    "--cov-report=html",
]
testpaths = ["tests"]

[tool.coverage.html]
show_contexts = true

[tool.mypy]
files = ["ansibleinventorycmdb", "tests"]
namespace_packages = true
explicit_package_bases = true
show_error_codes = true
strict = false
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
    "type-arg",
]
